Fix the show effect of task info page
Before, if line in the table is too long, it displays badly. Now, it
displays better in ie8, firefox & chrome.

--- a/flower/static/css/flower.css
+++ b/flower/static/css/flower.css
@@ -124,3 +124,10 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
+.span6 table {
+    table-layout:fixed;
+    word-wrap: break-word;
+}
+.span6 table caption + tbody tr td:first-child {
+    width: 25%;
+}
